[gd_scene load_steps=7 format=3 uid="uid://dbbqpr32frnaj"]

[ext_resource type="Script" path="res://scripts/score_manager.gd" id="1_m5jx5"]
[ext_resource type="Script" path="res://scripts/score/player_name_input_manager.gd" id="2_o2h1k"]
[ext_resource type="Texture2D" uid="uid://dwg56t8u2tvcu" path="res://sprites/score/NameSelection.png" id="3_1eqop"]
[ext_resource type="Script" path="res://scripts/score/score_board.gd" id="3_4qytx"]
[ext_resource type="Texture2D" uid="uid://d1gifw2yvq1l3" path="res://sprites/score/ScoreBoard.png" id="5_10ojd"]
[ext_resource type="PackedScene" uid="uid://qb4h2gkts4yw" path="res://scenes/lamp_light.tscn" id="6_arn5o"]

[node name="score" type="Node"]
script = ExtResource("1_m5jx5")

[node name="SettingName" type="Node" parent="."]

[node name="PlayerName" type="Node2D" parent="SettingName"]
z_index = 1
position = Vector2(960, 600)
script = ExtResource("2_o2h1k")

[node name="NameLabel" type="Label" parent="SettingName/PlayerName"]
offset_left = -100.0
offset_top = -250.0
offset_right = 102.0
offset_bottom = -99.0
theme_override_font_sizes/font_size = 110

[node name="Score" type="Node2D" parent="SettingName"]
z_index = 1
position = Vector2(960, 300)

[node name="ScoreLabel" type="Label" parent="SettingName/Score"]
offset_left = -200.0
offset_top = 382.0
offset_right = 82.0
offset_bottom = 535.0
theme_override_font_sizes/font_size = 112

[node name="bg" type="Sprite2D" parent="SettingName"]
position = Vector2(960, 540)
texture = ExtResource("3_1eqop")

[node name="ScoreBoard" type="Node2D" parent="."]
position = Vector2(960, 600)
script = ExtResource("3_4qytx")

[node name="ScoreBoard" type="Sprite2D" parent="ScoreBoard"]
position = Vector2(0, -60)
texture = ExtResource("5_10ojd")

[node name="Instructions" type="Label" parent="ScoreBoard"]
offset_left = -400.0
offset_top = -561.0
offset_right = 400.0
offset_bottom = -519.0
theme_override_font_sizes/font_size = 23
text = "Press [Escape/Select] to go to menu or [Enter/Start] to start a new game"

[node name="LampLight" parent="." instance=ExtResource("6_arn5o")]
position = Vector2(960, 540)
